--- a/case_study.Rmd
+++ b/case_study.Rmd
@@ -8,6 +8,8 @@ output: github_document
 ```{r setup, include=FALSE}
 library(tidyverse)
 library(viridis)
+library(leaflet)
+
 knitr::opts_chunk$set(
 	echo = TRUE,
 	warning = FALSE,
@@ -23,3 +25,145 @@ scale_colour_discrete = scale_colour_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
 theme_set(theme_minimal() + theme(legend.position = "bottom"))
 ```
+
+## do data science!!
+```{r}
+library(p8105.datasets)
+data(nyc_airbnb)
+```
+
+* how are airbnb prices related to rent in the neighborhood?
+* which neighborhood is most expensive and which is cheapest?
+* do hosts with multiple sites have higher prices or ratings?
+* does price have any relation to ratings?
+* is average length of stay related to neighborhood? price? etc?
+
+
+## Let's answer some questions
+
+```{r}
+nyc_airbnb = nyc_airbnb %>% 
+  mutate(
+    stars = review_scores_location / 2,
+    borough = neighbourhood_group
+  )
+
+nyc_airbnb %>%
+  mutate(neighbourhood = as.factor(neighbourhood)) %>%
+  filter(borough == "Manhattan") %>%
+  mutate(neighbourhood = fct_reorder(neighbourhood, price, na.rm = TRUE)) %>%
+  ggplot(aes(x = price, y = neighbourhood)) +
+  geom_point()
+```
+
+```{r}
+price_neighborhood = select(nyc_airbnb,neighbourhood, price) %>%
+  group_by(neighbourhood) %>%
+  summarise(
+    mean_price = mean(price)
+  ) %>%
+  arrange(
+    -mean_price
+  )
+```
+
+Mine
+```{r}
+nyc_airbnb %>%
+  group_by(neighbourhood_group) %>%
+  summarize(
+    avg_price = round(mean(price), 2),
+    median_price = median(price),
+    avg_rating = round(mean(review_scores_location, na.rm = TRUE), 1),
+    median_rating = median(review_scores_location, na.rm = TRUE)
+  ) 
+```
+
+
+```{r}
+nyc_airbnb %>%
+  group_by(neighbourhood_group, room_type) %>%
+  summarize(
+    med_price = median(price)
+  ) %>% 
+pivot_wider(
+  names_from = room_type,
+  values_from = med_price
+)
+```
+
+
+```{r}
+nyc_airbnb %>% 
+  filter(borough == "Staten Island", room_type == "Shared room")
+```
+
+
+```{r}
+nyc_airbnb %>%
+  count(neighbourhood_group, room_type) %>% 
+pivot_wider(
+  names_from = room_type,
+  values_from = n
+)
+```
+
+
+```{r}
+nyc_airbnb %>%
+  group_by(neighbourhood_group, neighbourhood) %>%
+  summarize(
+    avg_price = round(mean(price), 2),
+    avg_rating = round(mean(review_scores_location, na.rm = TRUE), 1)
+  ) %>% 
+  ggplot(aes(x = avg_rating, y = avg_price)) +
+  geom_point() +
+  facet_grid(~ neighbourhood_group)
+```
+
+```{r}
+nyc_airbnb %>% 
+  count(neighbourhood)
+```
+
+```{r}
+nyc_airbnb %>% 
+  filter(neighbourhood == "Astoria") %>% 
+  ggplot(aes(x = stars, y = price)) +
+  geom_point()
+```
+
+## spatial locations
+
+```{r}
+nyc_airbnb %>%
+  filter(
+    borough == "Manhattan",
+    price < 1000) %>% 
+  ggplot(aes(x = lat, y = long, color = price)) +
+  geom_point(alpha = 0.3) + 
+  facet_grid(~room_type)
+```
+
+
+```{r}
+pal = colorNumeric(
+  palette = "viridis",
+  domain = nyc_airbnb$stars
+)
+
+nyc_airbnb %>%
+  filter(borough == "Manhattan") %>%
+  mutate(
+    label = str_c("<b>Stars: ", stars, "</b><br>Price: ", price, sep = "")
+  ) %>%
+  sample_n(5000) %>%
+  leaflet() %>% 
+  addTiles() %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>% 
+  addCircleMarkers(~lat, ~long, 
+                   color = ~pal(stars),
+                   radius = 1,
+                   popup = ~ label)
+```
+
